results/SVCOMP/2-shot/log-assert5-2024_03_18_23_14_18.txt
import java.util.Random;

class assert5 {
  //@ ensures i > 1000 ==> \result;
  public static void func() {
    int i = new Random().nextInt();

    if (i > 1000) assert i > 1000 : "i is greater 1000"; // should hold
  }
}
/home/max/Documents/JMLGPT/tmp/assert5.java:4: error: cannot find symbol
  //@ ensures i > 1000 ==> \result;
              ^
  symbol:   variable i
  location: class assert5
/home/max/Documents/JMLGPT/tmp/assert5.java:4: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures i > 1000 ==> \result;
                            ^
2 errors

